--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gsap": "^3.12.5",
     "hamburger-react": "^2.5.0",
     "next": "14.1.4",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-responsive": "^10.0.0",
